2004-09-22 [christoph]

	* src/maildir.c
		keep flags that don't exist in Maildir in maildir_get_flags()

2004-09-17 [christoph]

	* src/maildir.c
		Add maildir_get_flags()

	Patch by Klaus Flittner <klaus_flittner@gmx.de>

2004-06-08 [christoph]

	Release Maildir Plugin 0.6

2004-06-01 [christoph]

	* src/maildir.c
	* src/maildir_gtk.c
		apply patch by Klaus Flittner <klaus_flittner@gmx.de>
		adding support for FolderItem renaming

2004-05-29 [christoph]

	* src/plugin_gtk.c
		unregister FolderView-PopUp when unloading GTK plugin

2004-05-27 [christoph]

	Release Maildir Plugin 0.5

2004-05-23 [christoph]

	* src/maildir.c
	* src/maildir_gtk.c
		apply patch by Klaus Flittner <klaus_flittner@gmx.de>
		adding folder item remove function

2004-05-21 [christoph]

	* src/maildir.c
	* src/maildir_gtk.c
		apply patch by Klaus Flittner <klaus_flittner@gmx.de>
		for improved Maildir++ scanning and creating new Maildir
		folders

2004-05-18 [christoph]

	* src/maildir.c
	* src/maildir_gtk.c
		implement new folder creation

2004-05-07 [christoph]

	* src/maildir.c
		fix segfault when adding mails to a maildir folder

2004-05-05 [christoph]

	* src/maildir.c
		fix rebuilding of folder tree

2004-05-02 [christoph]

	* src/maildir.c
		fix searching for messages when the file nas been renamed

2004-05-01 [christoph]

	* src/maildir.c
		o search in new and cur directories when scanning the folder
		  or searching for a message
		o rename files on flag changes

2004-04-28 [christoph]

	* configure.ac
	* src/plugin.c
	* src/plugin_gtk.c
		add/update version checks

	Release Maildir Plugin 0.4

2004-04-28 [christoph]

	* src/maildir.c
		o add microseconds to unique part of Maildir filenames
		o replace all "/" with G_DIR_SEPARATOR

2004-04-27 [christoph]

	* src/Makefile.am
	* src/maildir_gtk.[ch]				** NEW **
	* src/plugin_gtk.c
		add FolderView popup menu

	* src/maildir.c
		set a path for Inbox because the folder indentifier functions
		don't work correctly without a path
