@@ -1,3 +1,8 @@
+2004-09-24 [christoph]
+
+	* src/maildir.c
+		unset NEW flag when the message is not UNREAD
+
 2004-09-22 [christoph]
 
 	* src/maildir.c
